[package]
name = "wsmirror"
version = "0.1.0"
edition = "2018"
description = "WebSocket (rfc6455) mirror for testing client implementations, like echo.websocket.org"
keywords = ["WebSocket", "rfc6455", "cli"]
license = "MIT/Apache-2.0"
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/vi/wsmirror"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
futures = "0.3.17"
prometheus = { version = "0.13.0", features = ["process"],optional=true }
prometheus-metric-storage = {version="0.4.0",optional=true}
prometheus_exporter = {version="0.8.4",optional=true}
tokio = {version="1.12.0", features=["net","time","rt","macros"]}
tokio-tungstenite = "0.17.0"

[features]
default=[]
metrics=["prometheus","prometheus-metric-storage","prometheus_exporter"]
